--- a/MediMove/MediMove/Client/Shared/MainLayout.razor
+++ b/MediMove/MediMove/Client/Shared/MainLayout.razor
@@ -5,27 +5,13 @@
 
 
 <div class="page">
-   @* @if (IsAuthorized)
-    {
-        <div class="sidebar">
-            <NavMenu />
-        </div>
-    }*@
+   
     <AuthorizeView>
         <div class="sidebar">
             <NavMenu />
         </div>
     </AuthorizeView>
     <main>
-        <div class="top-row px-4">
-            <AuthorizeView>
-                
-                <a href="" @onclick="@HandleLogout" @onclick:preventDefault>Logout</a>
-
-            </AuthorizeView>
-            
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
 
         <article class="content px-4">
             @Body
@@ -43,9 +29,9 @@
     //    IsAuthorized = state.User.Identity.IsAuthenticated;
     //}
 
-    private async Task HandleLogout()
-    {
-        await stateProvider.Logout();
-        NavManager.NavigateTo("/login/", true);
-    }
+    //private async Task HandleLogout()
+    //{
+    //    await stateProvider.Logout();
+    //    NavManager.NavigateTo("/login/", true);
+    //}
 }
