Added deselection after date or shift change

--- a/MediMove/MediMove/Client/Pages/Dispacher/DispatcherDuties.razor
+++ b/MediMove/MediMove/Client/Pages/Dispacher/DispatcherDuties.razor
@@ -232,6 +232,8 @@
     {
         _transportResponse = await _TransportService.GetTransportByDayAndShift(_selectedDate, _selectedShift);
         _teamResponse = await _TeamService.GetTeamsByDayAndShift(_selectedDate, _selectedShift);
+        DeselectTransport();
+        DeselectTeam();
         StateHasChanged();
     }
 
