--- a/MediMove/MediMove/Client/Shared/NavMenu.razor
+++ b/MediMove/MediMove/Client/Shared/NavMenu.razor
@@ -49,6 +49,11 @@
                     <span class="oi oi-plus" aria-hidden="true"></span> Register
                 </NavLink>
             </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="admin/employeesreport">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Get Employees Report
+                </NavLink>
+            </div>
         </AuthorizeView>
     </nav>
 </div>
